Address sonar warnings
- use specialized exception types
- use toList instead of Collectors.toList
- remove commented out code
- use default cases + switch expressions
- replace deprecated method usage

Just doing enough to get this PR merged

Signed-off-by: Robert Young <robertyoungnz@gmail.com>